// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with expense 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      rent
    </h3>
  </Link>
  <p>
    TWD 
    $1,000
    -
    1970/01/01 08:00:00
  </p>
</div>
`;

exports[`should render ExpenseListItem with expense 2`] = `
<div>
  <Link
    replace={false}
    to="/edit/2"
  >
    <h3>
      coffee
    </h3>
  </Link>
  <p>
    TWD 
    $5,000
    -
    1969/12/29 08:00:00
  </p>
</div>
`;

exports[`should render ExpenseListItem with expense 3`] = `
<div>
  <Link
    replace={false}
    to="/edit/3"
  >
    <h3>
      dinner
    </h3>
  </Link>
  <p>
    TWD 
    $3,000
    -
    1970/01/04 08:00:00
  </p>
</div>
`;
